--- a/petdoc_pc/cert_1.html
+++ b/petdoc_pc/cert_1.html
@@ -224,8 +224,9 @@
                                                     <input type="number" value="01012341234" disabled>
                                                 </div>
                                                 <div class="wrap-btn-w">
-                                                    <input type="button" title="name" alt="인증" value="인증" class="btn-w"
-                                                        id="">
+                                                    <button type="button" class="btn-w">
+                                                    <span>인증</span>
+                                                    </button>
                                                 </div>
                                             </div>
                                             <div class="v-2">
@@ -234,8 +235,9 @@
                                                     <span class="timer">03:00</span>
                                                 </div>
                                                 <div class="wrap-btn-w">
-                                                    <input type="submit" title="name" alt="확인" value="확인" class="btn-w"
-                                                        id="">
+                                                    <button type="submit" class="btn-w">
+                                                        <span>확인</span>
+                                                    </button>
                                                 </div>
                                             </div>
                                         </div>
