--- a/petdoc_pc/cert_2.html
+++ b/petdoc_pc/cert_2.html
@@ -220,8 +220,9 @@
                                         </div>
                                         <div class="cert-confirm-block">
                                             <div class="wrap-btn-global btn-red">
-                                                <input type="submit" title="name" alt="본인확인" value="본인확인"
-                                                    class="btn-global active  last-form" id="">
+                                                <button type="submit" class="btn-global active  last-form">
+                                                    <span>본인확인</span>
+                                                </button>
                                                 <span class="txt-note">*본인확인이 되지 않은 고객님의 경우, 최초 1회<br> 본인확인을 통해 본인임을
                                                     확인해주시기
                                                     바랍니다.</span>
