--- a/petdoc_pc/edit_myinfo.html
+++ b/petdoc_pc/edit_myinfo.html
@@ -237,13 +237,14 @@
                                 <div class="wrap-2-column-content">
                                     <!--공통프로필-->
                                     <div class="picture-block">
-                                        <a href="#" class="wrap-picture">
+                                        <div href="#" class="wrap-picture">
                                             <span class="clip-picture myface">
                                                 <!-- <img src="img/customeal/mypet.png" alt="내사진"> -->
                                             </span>
-                                            <input type="file" class="custom-file-input">
-                                        </a>
-
+                                            <div class="clip-input-file">
+                                                <input type="file" class="custom-file-input">
+                                            </div>
+                                        </div>
                                         <!-- <p class="name-block">나니</p> -->
                                         <a href="#" class="sub-text">프로필 사진(선택)</a>
                                     </div>
