--- a/petdoc_pc/email.html
+++ b/petdoc_pc/email.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
     <title>Email</title>
+    <meta charset="utf-8">
 </head>
 
 <body>
@@ -10,16 +10,16 @@
     <table width="100%" border="0" cellspacing="0" cellpadding="0" style="padding:0;" style="min-width:100%;width:100%">
         <tr>
             <td style="min-width:100%;width:100%;padding-top:0px;padding-right:0px;padding-bottom:0px;padding-left:0px">
-                <table class="container-table" border="0" align="center" cellpadding="0" cellspacing="0" style="margin:0 auto;width:100%;max-width:432px">
+                <table class="container-table" border="0" align="center" cellpadding="0" cellspacing="0" style="margin:0 auto;width:100%;max-width:432px;border-spacing:0;font-family:'Apple SD Gothic Neo',Malgun Gothic,'\00b3cb\00c6c0',Sans-serif;">
                     <tr>
                         <td
-                            style=" font-family: 'Noto Sans KR', 'Segoe UI', -apple-system, BlinkMacSystemFont,Roboto;font-size: 30px;line-height:45px;padding-bottom:17px;font-weight: normal; letter-spacing: -1px; color: #303644;">
+                            style=" font-family:'Apple SD Gothic Neo',Malgun Gothic,'\00b3cb\00c6c0',Sans-serif;font-size:30px;line-height:45px;padding-bottom:17px;font-weight: normal; letter-spacing: -1px; color: #303644;">
                             안녕하세요,<br />내 손안의 수의사 펫닥입니다.
                         </td>
                     </tr>
                     <tr>
                         <td
-                            style=" font-family: 'Noto Sans KR', 'Segoe UI', -apple-system, BlinkMacSystemFont,Roboto;padding-bottom:100px;line-height: 1.7; letter-spacing: -0.6px; color: #475377; font-size: 15px;">
+                            style=" font-family:'Apple SD Gothic Neo',Malgun Gothic,'\00b3cb\00c6c0',Sans-serif;padding-bottom:100px;line-height: 1.7; letter-spacing: -0.6px; color: #475377; font-size: 15px;">
                             최준호
                             님이 등록해주신 이메일 주소 junho@naver.com에 대한
                             확인을 해주세요. 확인을 완료하시면 V+lab, V+care에서 사용하실 수
@@ -31,7 +31,7 @@
                                 <tr>
                                     <td bgcolor="#ff5a5c" style="padding: 14px 85px 14px 85px; border-radius:25.5px;" align="center"><a href="#"
                                             target="_blank"
-                                            style="font-size: 17px;  font-family: 'Noto Sans KR', 'Segoe UI', -apple-system, BlinkMacSystemFont,Roboto; font-weight: bold; color: #ffffff; text-decoration: none; display: inline-block;letter-spacing:-1px;">이메일
+                                            style="font-size: 17px;  font-family:font-family:'Apple SD Gothic Neo',Malgun Gothic,'\00b3cb\00c6c0',Sans-serif; font-weight: bold; color: #ffffff; text-decoration: none; display: inline-block;letter-spacing:-1px;">이메일
                                             확인하기</a>
                                     </td>
                                 </tr>
@@ -39,7 +39,7 @@
                         </td>
                         </tr>
                     <tr>
-                        <td style=" font-family: 'Noto Sans KR', 'Segoe UI', -apple-system, BlinkMacSystemFont,Roboto;padding-top:54px; display: inline-block; text-align: left; font-size: 14px; line-height: 1.71; letter-spacing: -0.4px; color: #8d95a0;">*위 버튼 클릭에 문제가 있을 경우 아래 URL을 브라우저 URL 창에 붙여
+                        <td style=" font-family:'Apple SD Gothic Neo',Malgun Gothic,'\00b3cb\00c6c0',Sans-serif;padding-top:54px; display: inline-block; text-align: left; font-size: 14px; line-height: 1.71; letter-spacing: -0.4px; color: #8d95a0;">*위 버튼 클릭에 문제가 있을 경우 아래 URL을 브라우저 URL 창에 붙여
                             넣으세요. 
                             <a href="#" style="padding-bottom:24px;text-decoration:underline; display: inline-block; text-align: left; font-size: 14px; line-height: 1.71; letter-spacing: -0.4px; color: #8d95a0;">
                                 https://www.petdoc.co.kr/email/confirm/asdf12341561
@@ -47,8 +47,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td
-                            style=" font-family: 'Noto Sans KR', 'Segoe UI', -apple-system, BlinkMacSystemFont,Roboto;width:100%;padding:20px 18px;border-radius: 2px; border: solid 0.5px #e1e4e6; background-color: #f8f8f8;font-size: 14px;line-height: 1.71;color: #8d95a0;letter-spacing: -0.6px;text-align: center;">
+                        <td style=" font-family:'Apple SD Gothic Neo',Malgun Gothic,'\00b3cb\00c6c0',Sans-serif;width:100%;padding:20px 18px;border-radius: 2px; border: solid 0.5px #e1e4e6; background-color: #f8f8f8;font-size: 14px;line-height: 1.71;color: #8d95a0;letter-spacing: -0.6px;text-align: center;">
                             본 메일은 발신 전용 메일입니다. 문의 사항은 고객센터를 이용해주세요.<br />
                             © 2019 Petdoc Inc. All Rights Reserved. </td>
                     </tr>
