--- a/petdoc_pc/entrance.html
+++ b/petdoc_pc/entrance.html
@@ -182,8 +182,9 @@
                                     정보를 저장하여 손쉽게 관리가 가능합니다.
                                 </div>
                                 <div class="wrap-btn-global btn-red">
-                                    <input type="submit" title="name" alt="펫닥 로그인" value="펫닥 로그인" class="btn-global"
-                                        id="">
+                                    <button type="submit" class="btn-global">
+                                        <span>펫닥 로그인</span>
+                                    </button>
                                     <a href="#" class="txt-note">비회원으로 시작</a>
                                 </div>
                             </div>
