--- a/petdoc_pc/form_condition_04_allergy.html
+++ b/petdoc_pc/form_condition_04_allergy.html
@@ -169,20 +169,6 @@
         <!-- 기존 컨텐츠 영역 -->
         <div class="container">
             <div class="content">
-                <!-- 기존 컨텐츠 내부의 네비게이션 영역 -->
-                <div class="page_info">
-                    <ul class="page_info_list">
-                        <li class="list_item">
-                            <a href="#" class="menu_txt">홈</a>
-                        </li>
-                        <li class="list_item">
-                            <a href="#" class="menu_txt">콘텐츠</a>
-                        </li>
-                        <li class="list_item">
-                            <span class="menu_txt">상담</span>
-                        </li>
-                    </ul>
-                </div>
                 <div class="content_inner">
                     <!--//커스터밀-->
                     <div class="customeal">
@@ -207,66 +193,80 @@
                                                 <li>
                                                     <div class="radio-label-thumb cheken">
                                                         <label>
-                                                            <input type="checkbox" class="input-checkbox required-input" name="chicken" value="">
-                                                                <div class="radio-thumb"></div>
-                                                                <p>닭고기</p>
+                                                            <input type="checkbox" class="input-checkbox required-input"
+                                                                name="chicken" value="">
+                                                            <div class="radio-thumb"></div>
+                                                            <p>닭고기</p>
                                                         </label>
                                                     </div>
                                                 </li>
                                                 <li>
                                                     <div class="radio-label-thumb duck">
                                                         <label>
-                                                            <input type="checkbox" class="input-checkbox required-input " name="duck" value="">
-                                                                <div class="radio-thumb">
-                                                                </div>
-                                                                <p>오리고기</p>
+                                                            <input type="checkbox"
+                                                                class="input-checkbox required-input " name="duck"
+                                                                value="">
+                                                            <div class="radio-thumb">
+                                                            </div>
+                                                            <p>오리고기</p>
                                                         </label>
                                                     </div>
                                                 </li>
                                                 <li>
                                                     <div class="radio-label-thumb beef">
                                                         <label>
-                                                            <input type="checkbox" class="input-checkbox required-input " name="beef" value="">
-                                                                <div class="radio-thumb">
-                                                                </div>
-                                                                <p>소고기</p>
+                                                            <input type="checkbox"
+                                                                class="input-checkbox required-input " name="beef"
+                                                                value="">
+                                                            <div class="radio-thumb">
+                                                            </div>
+                                                            <p>소고기</p>
                                                         </label>
                                                     </div>
                                                 </li>
                                                 <li>
                                                     <div class="radio-label-thumb salmon">
                                                         <label>
-                                                            <input type="checkbox" class="input-checkbox required-input " name="salmon" value="">
-                                                                <div class="radio-thumb">
-                                                                </div>
-                                                                <p>연어&amp;참치</p>
+                                                            <input type="checkbox"
+                                                                class="input-checkbox required-input " name="salmon"
+                                                                value="">
+                                                            <div class="radio-thumb">
+                                                            </div>
+                                                            <p>연어&amp;참치</p>
                                                         </label>
                                                     </div>
                                                 </li>
                                                 <li>
                                                     <div class="radio-label-thumb lamb">
                                                         <label>
-                                                            <input type="checkbox" class="input-checkbox required-input " name="lamb" value="">
-                                                                <div class="radio-thumb">
-                                                                </div>
-                                                                <p>양고기</p>
+                                                            <input type="checkbox"
+                                                                class="input-checkbox required-input " name="lamb"
+                                                                value="">
+                                                            <div class="radio-thumb">
+                                                            </div>
+                                                            <p>양고기</p>
                                                         </label>
                                                     </div>
                                                 </li>
                                                 <li>
                                                     <div class="radio-label-thumb anyof">
                                                         <label>
-                                                            <input type="checkbox" class="input-checkbox required-input uncheck-all" name="anyof" value="">
-                                                                <div class="radio-thumb">
-                                                                </div>
-                                                                <p>가리지않아요</p>
+                                                            <input type="checkbox"
+                                                                class="input-checkbox required-input uncheck-all"
+                                                                name="anyof" value="">
+                                                            <div class="radio-thumb">
+                                                            </div>
+                                                            <p>가리지않아요</p>
                                                         </label>
                                                     </div>
-                                                </li></ul>
+                                                </li>
+                                            </ul>
                                         </div>
                                         <div class="wrap-btn-global btn-blue">
                                             <p class="error-msg">모든 육류에 알러지가 있는 경우 주식 사료를 추천할 수 없습니다.</p>
-                                            <input type="submit" title="name" alt="다음" value="다음" class="btn-global" id="">
+                                            <button type="submit" class="btn-global">
+                                                <span>다음</span>
+                                            </button>
                                         </div>
                                     </fieldset>
                                 </form>
