--- a/petdoc_pc/form_condition_05_preference.html
+++ b/petdoc_pc/form_condition_05_preference.html
@@ -169,20 +169,6 @@
         <!-- 기존 컨텐츠 영역 -->
         <div class="container">
             <div class="content">
-                <!-- 기존 컨텐츠 내부의 네비게이션 영역 -->
-                <div class="page_info">
-                    <ul class="page_info_list">
-                        <li class="list_item">
-                            <a href="#" class="menu_txt">홈</a>
-                        </li>
-                        <li class="list_item">
-                            <a href="#" class="menu_txt">콘텐츠</a>
-                        </li>
-                        <li class="list_item">
-                            <span class="menu_txt">상담</span>
-                        </li>
-                    </ul>
-                </div>
                 <div class="content_inner">
                     <!--//커스터밀-->
                     <div class="customeal">
@@ -279,8 +265,9 @@
                                             </ul>
                                         </div>
                                         <div class="wrap-btn-global btn-blue">
-                                            <input type="submit" title="name" alt="다음" value="다음" class="btn-global"
-                                                id="">
+                                            <button type="submit"class="btn-global" id="">
+                                                <span>다음</span>
+                                            </button>
                                         </div>
                                     </fieldset>
                                 </form>
