--- a/petdoc_pc/form_register_02_animaltype.html
+++ b/petdoc_pc/form_register_02_animaltype.html
@@ -168,20 +168,6 @@
         <!-- 기존 컨텐츠 영역 -->
         <div class="container">
             <div class="content">
-                <!-- 기존 컨텐츠 내부의 네비게이션 영역 -->
-                <div class="page_info">
-                    <ul class="page_info_list">
-                        <li class="list_item">
-                            <a href="#" class="menu_txt">홈</a>
-                        </li>
-                        <li class="list_item">
-                            <a href="#" class="menu_txt">콘텐츠</a>
-                        </li>
-                        <li class="list_item">
-                            <span class="menu_txt">상담</span>
-                        </li>
-                    </ul>
-                </div>
                 <div class="content_inner">
                     <!--//커스터밀-->
                     <div class="customeal">
@@ -209,7 +195,9 @@
                                             <li>강아지</li><li>고양이</li><li>패럿</li><li>거북이</li><li>토끼</li><li>닭</li><li>이구아나</li></ul>
                                         </div>
                                         <div class="wrap-btn-global btn-red">
-                                            <input type="submit" title="name" alt="반려동물타입제출" value="다음" class="btn-global" id="">
+                                            <button type="submit" class="btn-global">
+                                                <span>다음</span>
+                                            </button>
                                         </div>
                                     </fieldset>
                                 </form>
