--- a/petdoc_pc/mypet_list.html
+++ b/petdoc_pc/mypet_list.html
@@ -280,7 +280,9 @@
                                     </li>
                                 </ul>
                                 <div class="wrap-btn-global btn-blue w300 btn-deep-blue">
-                                    <input type="button" title="name" alt="추가하기" value="추가하기" class="btn-global" id="">
+                                    <button type="button" class="btn-global">
+                                        <span>추가하기</span>
+                                    </button>
                                 </div>
                                 <!--리스트가 없을때 아래 버튼만 노출-->
                                 <!-- <div class="wrap-btn-global btn-blue w300 no-list">
