--- a/petdoc_pc/mypet_list_2.html
+++ b/petdoc_pc/mypet_list_2.html
@@ -245,7 +245,9 @@
                                 </li>
                             </ul>
                             <div class="wrap-btn-global btn-blue w300 btn-deep-blue">
-                                <input type="button" title="name" alt="새로운 아이를 위한 식사" value="새로운 아이를 위한 식사" class="btn-global" id="">
+                                <button type="button" class="btn-global">
+                                    <span>새로운 아이를 위한 식사</span>
+                                </button>
                             </div>
                         </div>
                     </div>
