--- a/petdoc_pc/mypet_no_list.html
+++ b/petdoc_pc/mypet_no_list.html
@@ -211,7 +211,9 @@
                             <div class="wrap-2-column-content">
                                <div class="wrap-btn-global btn-deep-blue w300 no-list">
                                     <p class="notice-msg">아직 등록된 반려동물이 없습니다.</p>
-                                    <input type="button" title="name" alt="추가하기" value="추가하기" class="btn-global active" id="">
+                                    <button type="button" class="btn-global active">
+                                    <span>추가하기</span>
+                                    </button>
                                 </div>
                             </div>
                         </div>
