--- a/petdoc_pc/point.html
+++ b/petdoc_pc/point.html
@@ -6,13 +6,11 @@
     <title>콘텐츠홈_상담상세</title>
     <link rel="stylesheet" type="text/css" href="css/services.css">
     <link rel="stylesheet" type="text/css" href="css/customeal/style.css">
-    <link rel="stylesheet" type="text/css" href="css/customeal/pikaday.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,700&display=swap&subset=korean"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <script src="js/jquery.min.js"></script>
     <script src="js/pikaday.js"></script>
-    <script src="js/pikaday.jquery.js"></script>
     <script src="js/live.js"></script>
     <script src="js/dropkick.js"></script>
 </head>
@@ -243,7 +241,9 @@
                                                 </div>
                                             </div>
                                             <div class="wrap-btn-w">
-                                                <input type="button" title="name" alt="조회" value="조회" class="btn-w" id="">
+                                                <button type="button" class="btn-w">
+                                                    <span>조회</span>
+                                                </button>
                                             </div>
                                         </div>
                                         <!--////////////내역-->
@@ -434,6 +434,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
 </body>
 
 </html>
