--- a/petdoc_pc/result.html
+++ b/petdoc_pc/result.html
@@ -547,14 +547,14 @@
                             </div>
                             <!-- <div class="wrap-fixed-button">
                                                         <div class="wrap-btn-left">
-                                                            <button class="btn-left-blue">맞춤식 구매하기</button>
+                                                            <button class="btn-left-blue"><span>맞춤식 구매하기</span></button>
                                                         </div>
                                                         <div class="wrap-btn-right wrap-btn-global btn-l-red">
-                                                            <button class="btn-global active last-form">맞춤식 구매하기</button>
+                                                            <button class="btn-global active last-form"><span>맞춤식 구매하기</span></button>
                                                         </div>
                                 </div> -->
                             <div class="wrap-fixed-button wrap-btn-global btn-l-red">
-                                <button type="button" class="btn-global active last-form">맞춤식 구매하기</button>
+                                <button type="button" class="btn-global active last-form"><span>맞춤식 구매하기</span></button>
                             </div>
                         </div>
                     </div>
