--- a/petdoc_pc/edit_petinfo.html
+++ b/petdoc_pc/edit_petinfo.html
@@ -373,14 +373,15 @@
                                         </div>
                                         <!--공통프로필-->
                                         <div class="picture-block">
-                                            <a href="#" class="wrap-picture">
+                                            <div href="#" class="wrap-picture">
                                                 <span class="clip-picture">
                                                     <!-- <img src="img/customeal/mypet.png" alt="내반려동물사진"> -->
                                                 </span>
-                                                <input type="file" class="custom-file-input">
-                                            </a>
+                                                <div class="clip-input-file">
+                                                    <input type="file" class="custom-file-input">
+                                                </div>
+                                            </div>
                                             <!-- <p class="name-block">나니</p> -->
-                                            <a href="#" class="sub-text">반려동물 사진(선택)</a>
                                         </div>
                                         <div class="tab-toggle-block">
                                             <!--tab1-------------------------------------------------------------------->
@@ -641,8 +642,9 @@
                                                             </tr>
                                                         </table>
                                                         <div class="wrap-btn-global btn-red w300">
-                                                            <input type="submit" title="" alt="기초 반려동물 정보 저장"
-                                                                value="기초 반려동물 정보 저장" class="btn-global" id="">
+                                                            <button type="submit" class="btn-global">
+                                                                <span>기초 반려동물 정보 저장</span>
+                                                            </button>
                                                             <a class="delete-msg trigger-pop-center" href="#"
                                                                 onclick="(function(){ $('.ly-pop.test1').fadeIn(); return false; })();return false;">반려동물
                                                                 삭제</a>
@@ -1171,9 +1173,7 @@
                                                             </tr>
                                                         </table>
                                                         <div class="wrap-btn-global btn-red w300">
-                                                            <input type="button" title="name" alt="맞춤식 진단 정보 저장"
-                                                                value="맞춤식 진단 정보 저장" class="btn-global last-form active"
-                                                                id="">
+                                                            <button type="submit"  class="btn-global last-form active"><span>맞춤식 진단 정보 저장</span></button>
                                                         </div>
                                                     </fieldset>
                                                 </form>
