--- a/petdoc_pc/form_condition_08_pregnancy.html
+++ b/petdoc_pc/form_condition_08_pregnancy.html
@@ -170,20 +170,6 @@
         <!-- 기존 컨텐츠 영역 -->
         <div class="container">
             <div class="content">
-                <!-- 기존 컨텐츠 내부의 네비게이션 영역 -->
-                <div class="page_info">
-                    <ul class="page_info_list">
-                        <li class="list_item">
-                            <a href="#" class="menu_txt">홈</a>
-                        </li>
-                        <li class="list_item">
-                            <a href="#" class="menu_txt">콘텐츠</a>
-                        </li>
-                        <li class="list_item">
-                            <span class="menu_txt">상담</span>
-                        </li>
-                    </ul>
-                </div>
                 <div class="content_inner">
                     <!--//커스터밀-->
                     <div class="customeal">
@@ -265,8 +251,9 @@
                                             </div>
                                         </div>
                                         <div class="wrap-btn-global btn-l-red">
-                                            <input type="submit" title="name" alt="진단결과 보러가기" value="진단결과 보러가기"
-                                                class="btn-global last-form active" id="">
+                                            <button type="submit" class="btn-global last-form active">
+                                                <span>진단결과 보러가기</span>
+                                            </button>
                                         </div>
                                     </fieldset>
                                 </form>
