--- a/petdoc_pc/secession.html
+++ b/petdoc_pc/secession.html
@@ -315,9 +315,9 @@
                                             </div>
                                         </div>
                                         <div class="wrap-btn-global btn-red-edit">
-                                            <input type="submit" title="name" alt="탈퇴하기" value="탈퇴하기"
-                                                class="btn-global trigger-pop-center" id=""
-                                                onclick="(function(){ $('.ly-pop').fadeIn(); return false; })();return false;">
+                                            <button type="submit" class="btn-global trigger-pop-center" onclick="(function(){ $('.ly-pop').fadeIn(); return false; })();return false;">
+                                                <span>탈퇴하기</span>
+                                            </button>
                                         </div>
                                     </div>
                                 </div>
